# taipei-traffic-analysis

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  完整分析.ipynb  完整研究報告.md
.streamlit/: config.toml
api/: main.py
app/: dashboard.py  gradio_app.py
data/: traffic.sqlite
sql/: age_stats.sql  cause_stats.sql  cause_vehicle_cross.sql  district_stats.sql  gender_stats.sql  hourly_stats.sql  monthly_stats.sql  time_period_stats.sql  vehicle_stats.sql  weather_monthly.sql
src/taipei_traffic/: __init__.py  charts.py  codes.py  config.py  data.py  db.py  figures.py  models.py  pipeline.py  stats.py
分析結果/: 分析摘要.txt
分析結果/模型結果/: 卡方檢定結果.csv  邏輯迴歸_勝算比.csv  邏輯迴歸_模型摘要.txt
分析結果/統計表/: 天氣月份統計.csv  年齡統計.csv  性別統計.csv  時段統計.csv  月份統計.csv  每小時統計.csv  肇因統計.csv  肇因車種交叉統計.csv  行政區統計.csv  車種統計.csv
