[project]
name = "taipei-traffic-analysis"
version = "1.0.0"
description = "Multi-dimensional analysis of Taipei City A1/A2 traffic accidents (2024): data pipeline, statistical models, interactive dashboard, and REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "squarify>=0.4.4",
    "statsmodels>=0.14.6",
    "streamlit>=1.59.1",
    # 不用 [standard]：uvloop 在 Streamlit Cloud 容器內會 segfault，純 asyncio 即可
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taipei_traffic"]
